# record-manager

./: .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  cmake.py  test.py
common/: CMakeLists.txt
include/: json.h  record_manager.h
objects/: rmp.pb.cc  rmp.pb.h
proto/: rmp.proto
src/: client.cpp  record_manager.cpp  server.cpp
test/: test.cpp  test.h
